test/sema/no-matching-initializer.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

struct Foo: Copyable {
    Foo() { }
    Foo(int i) { }
}

void main() {
    // CHECK: no matching constructor for 'Foo' with argument list of type '(float)'
    // CHECK: 4:5: note: candidate function:
    // CHECK-NEXT: Foo() { }
    // CHECK: 5:5: note: candidate function:
    // CHECK-NEXT: Foo(int i) { }
    // CHECK-NOT: note
    _ = Foo(3.14)
}
